<resources>
    <string name="app_name">Shopping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome.!</string>
    <string name="shopping">Shopping</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_have_not_any_account">Do you have not any account?</string>
    <string name="full_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_phone">Enter your phone</string>
    <string name="enter_password">Enter your password</string>
    <string name="title_home">Home</string>
    <string name="title_shopping">Shop</string>
    <string name="account">Account</string>
    <string name="message">Message</string>
    <string name="signUp">Sign Up</string>
    <string name="Do_not">Don\'t have Account?</string>
    <string name="already">Already have an Account</string>
    <string name="loginWith">Login with social media Account</string>
    <string name="here">Login here</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="user">Usama Sayed</string>
    <string name="account_profile">Account Profile</string>
    <string name="language_setting">Language Settings</string>
    <string name="change_password">Chnage Password</string>
    <string name="my_favourite">My Favourite</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="my_orders">My Orders</string>
    <string name="actionbar_spinner">ActionBar Spinner</string>
    <string name="product_image">Proudct Image</string>
    <string name="skip_now">Skip Now</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="checkout">CheckOut</string>
    <string name="total">Total</string>

    <string name="zero_count_val"> <strike>0</strike></string>
    <string name="search">Search</string>


    <string-array name="spinnerData">
        <item>All</item>
        <item>t1</item>
        <item>t2</item>
        <item>t3</item>
    </string-array>

</resources>