<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:theme="@style/MyToolbarStyle"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/account_menu"
        app:titleTextColor="@color/white"/>

    <RelativeLayout
        android:id="@+id/profile_messageToast"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_28sdp"
        android:background="@color/activeBottomColor"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/Profile_Welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/profile_textErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="Sorry, plz register."
            android:textColor="@color/red"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/profile_textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_toEndOf="@id/profile_textErrorMessage"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <ImageButton
            android:id="@+id/profile_imageErrorMessage"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_6sdp"
            android:background="@color/activeBottomColor"
            android:src="@drawable/ic_baseline_error_outline_24" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Profile_change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/profile_image"
        android:layout_alignBottom="@+id/profile_image"
        android:layout_marginStart="-20dp"
        android:backgroundTint="@color/welcome_Color"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_camera"
        app:backgroundTint="@color/white"
        app:borderWidth="1dp"
        app:elevation="6dp"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_Account"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.777"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/Profile_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/_42sdp"
        android:layout_toEndOf="@+id/profile_image"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Profile_Welcome"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/profile_image"
        android:fontFamily="sans-serif-medium"
        android:text="@string/user"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/Profile_Welcome" />

    <Button
        android:id="@+id/profile_Account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_margin="@dimen/_10sdp"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:gravity="start"
        android:text="@string/account_profile"
        android:textColor="@color/black"
        android:theme="@style/accountButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <Button
        android:id="@+id/profile_Language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_Account"
        android:layout_margin="@dimen/_10sdp"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:gravity="start"
        android:text="@string/language_setting"
        android:textColor="@color/black"
        android:theme="@style/accountButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_Account" />


    <Button
        android:id="@+id/profile_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_Language"
        android:layout_margin="@dimen/_10sdp"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:gravity="start"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:theme="@style/accountButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_Language" />

    <Button
        android:id="@+id/profile_Favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_password"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:gravity="start"
        android:text="@string/my_favourite"
        android:textColor="@color/black"
        android:theme="@style/accountButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_password" />

    <Button
        android:id="@+id/profile_About"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_Favourite"
        android:layout_margin="@dimen/_10sdp"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:gravity="start"
        android:text="@string/about"
        android:textColor="@color/black"
        android:theme="@style/accountButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_Favourite" />

    <Button
        android:id="@+id/profile_Logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_About"
        android:layout_margin="@dimen/_10sdp"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:gravity="start"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:theme="@style/accountButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_About" />

    <ProgressBar
        android:id="@+id/profile_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

</androidx.constraintlayout.widget.ConstraintLayout>